# bytebabbel

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  feature-list.md
cli/e2m/: Cargo.toml
cli/e2m/resources/: config.yaml  template_move.toml
cli/e2m/resources/tests/: response_events.json  users.abi
cli/e2m/src/: aptos_commands.rs  call.rs  convert.rs  deploy.rs  flags.rs  main.rs  profile.rs  resources.rs  txflags.rs
cli/e2m/src/call/: args.rs  function_id.rs  mod.rs
cli/e2m/src/convert/: deploy.rs  flags.rs  mod.rs
cli/e2m/src/resources/: decode.rs  mod.rs  query.rs  resource_path.rs
cli/e2m/tests/: cli.rs
cli/e2m/tests/convert/: localnode.rs  localnode_and_native_types.rs  mod.rs
cli/s2m/: Cargo.toml
cli/s2m/src/: convert.rs  main.rs
e2m/: Cargo.toml
e2m/src/: convert.rs  main.rs
examples/: a_plus_b.sol  (+1 more)
translator/: Cargo.toml
translator/eth/: Cargo.toml
translator/eth/src/: compile.rs  lib.rs  program.rs  vm.rs
translator/eth/src/abi/: call.rs  entries.rs  mod.rs  types.rs
translator/eth/src/abi/call/: encode.rs  mod.rs
translator/eth/src/abi/inc_ret_param/: mod.rs  types.rs
translator/eth/src/bytecode/: block.rs  instruction.rs  loc.rs  mod.rs  ops.rs  types.rs
translator/eth/src/bytecode/flow_graph/: builder.rs  debug.rs  flow.rs  mapper.rs  mod.rs
translator/eth/src/bytecode/hir/: const_pool.rs  context.rs  debug.rs  func.rs  ir.rs  mod.rs  stack.rs  vars.rs
translator/eth/src/bytecode/hir2/: const_pool.rs  context.rs  debug.rs  ir.rs  mod.rs  stack.rs  vars.rs
translator/eth/src/bytecode/lir/: context.rs  ir.rs  mod.rs  stack.rs
translator/eth/src/bytecode/mir/: constructor.rs  mod.rs
translator/eth/src/bytecode/pre_processing/: ctor.rs
translator/eth/src/bytecode/tracing/: exec.rs  mod.rs  tracer.rs
translator/eth/tests/: ops.rs
translator/evm/: Cargo.toml
translator/evm/src/: function.rs  lib.rs  program.rs
translator/evm/src/abi/: abi.rs  api.rs  call.rs  entries.rs  mod.rs  types.rs
translator/evm/src/abi/call/: encode.rs  mod.rs
translator/evm/src/abi/inc_ret_param/: mod.rs  types.rs
translator/evm/src/bytecode/: block.rs  ctor.rs  instruction.rs  mod.rs  ops.rs  types.rs
translator/evm/src/bytecode/executor/: debug.rs  env.rs  execution.rs  flow_graph.rs  history.rs  instructions.rs  mem.rs  mod.rs  predictor.rs  stack.rs  v2.rs
translator/evm/src/bytecode/flow_graph/: builder.rs  debug.rs  flow.rs  mapper.rs  mod.rs  traicing.rs
translator/evm/tests/: ops.rs
translator/intrinsic/: Cargo.toml  build.rs
translator/intrinsic/build_helper/: mod.rs  table.rs
translator/intrinsic/mv/: Move.toml
translator/intrinsic/mv/sources/: contruct_template.move  du256.move  info.move  math.move  mem.move  memory.move  persist.move  storage.move  store.move  template.move  test.move  u256.move  u512.move  u64.move
translator/intrinsic/mv/tests/: du256_tests.move  mem_tests.move  memory_tests.move  persist_tests.move  u256_tests.move  u512_tests.move
translator/intrinsic/src/: lib.rs  parts.rs  table.rs
translator/intrinsic/tests/: module.rs  move_intrinsic.rs  parts.rs
translator/me/: Cargo.toml
translator/me/examples/: load_all_resource.rs  load_only_modules.rs  run_sol.rs
translator/me/src/: lib.rs  profile.rs  solidity.rs  stdlib.rs
translator/me/src/load/: mod.rs  response.rs
translator/me/src/resolver/: mod.rs  print_access_path.rs
translator/mv/: Cargo.toml
translator/mv/src/: lib.rs  mvir.rs
translator/mv/src/function/: mod.rs  signature.rs
translator/mv/src/module/: func.rs  mod.rs
translator/mv/src/mv_ir/: crop.rs  func.rs  interface.rs  mod.rs
translator/mv/src/translator/: bytecode.rs  constants.rs  identifier.rs  mod.rs  signature.rs  writer.rs
translator/mv/tests/: math.rs  signature.rs  writer.rs
translator/src/: lib.rs
translator/test_infra/: Cargo.toml  build.rs  build.sh
translator/test_infra/resources/test_helper/: Move.toml
translator/test_infra/sol/: a_plus_b.sol  byte.sol  const_fn.sol  evm.sol  hello_world.sol  if_fn.sol  ignore_loops.sol  info.sol  loops.sol  math_fn_minusdevide.sol  math_fn_minusmultiply.sol  math_fn_multiplydived.sol  math_fn_plus.sol  math_fn_plusmultiply.sol  parameters.sol  private_functions.sol  strings.sol  two_functions.sol
translator/test_infra/sol/assignment_operator/: ignore_simple.sol  simple.sol
translator/test_infra/sol/bitwise/: simple.sol
translator/test_infra/sol/constructors/: empty.sol  with_data.sol
translator/test_infra/sol/demo/: address_support.sol  user_store.sol  users.sol
translator/test_infra/sol/fn/: fn.sol  ignore_recursion.sol  recursion.sol
translator/test_infra/sol/loop/: dowhile.sol  for.sol  ignore_dowhile.sol  ignore_for.sol  ignore_while.sol  while.sol
translator/test_infra/sol/math/: math_fn_divede.sol  multiply.sol  multiplydived.sol  plusmultiply.sol
translator/test_infra/sol/mod/: add.sol  mul.sol
translator/test_infra/sol/store/: bool_store.sol  load_store.sol
translator/test_infra/sol/types/: address.sol  array.sol  bytes.sol  defined.sol  enum.sol  ignore_array.sol  ignore_bytes.sol  ignore_int.sol  ignore_string.sol  int.sol  simple.sol  string.sol
translator/test_infra/sol/uniswap/: 1_interface_fn.sol  2_import_interface_fn.sol  3_constant_ignore.sol  3_using.sol  4_contract_param.sol  4_contract_param_ignore.sol  5_types_ignore.sol  6_constructor.sol  6_constructor_ignore.sol  7_constructor_ignore.sol  7_mapping_ignore.sol  8_mapping.sol  8_mapping_ignore.sol  9_using_ignore.sol  i_IUniswapV2ERC20.sol  i_import_interface.sol  ignore_9_using.sol  l_SafeMath.sol
translator/test_infra/src/: color.rs  env.rs  executor.rs  generator.rs  lib.rs  revm.rs  sol.rs  stdlib.rs
translator/test_infra/tests/: address.rs  demo.rs  loops.rs  mv_balance.rs  private_functions.rs  sol.rs  store.rs  strings.rs  template_crop.rs  tests.rs  tests_sol.rs  users.rs
translator/test_infra/tests/testssol/: clog.rs  color.rs  convert.rs  mod.rs  parse.rs
translator/test_infra/tests/vm_tests/: address.rs  loops.rs  mod.rs  store.rs  strings.rs  template_crop.rs  users.rs
(+314 files in other folders)
