[workspace]
members = [
    "translator/eth",
    "translator/mv",
    "translator/intrinsic",
    "translator",
    "translator/test_infra",
    "translator/me",
    "cli/e2m",
]

[workspace.dependencies]
#Aptos
aptos = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-cached-packages = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-aggregator = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-gas = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }
aptos-state-view = { git = "https://github.com/aptos-labs/aptos-core", rev = "1798cfade82b55a5e484eddb73e1667fd429a77a" }

#MOVE
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-bytecode-source-map = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
dependencies = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-disassembler = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }

#EVM
evm = { git = "https://github.com/pontem-network/evm.git", branch = "Keccak256" }
evm-core = { git = "https://github.com/pontem-network/evm.git", branch = "Keccak256" }
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }


anyhow = "~1.0.65"
log = "0.4"
hex = "0.4"
bcs = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = ">=0.8.26"
ethabi = "17.2"
lazy_static = "1.4"
regex = "1.6"
itertools = "0.10.3"
tempdir = "0.3.7"