[workspace]
members = [
    "translator/eth",
    "translator/mv",
    "translator/intrinsic",
    "translator",
    "translator/test_infra",
    "translator/me",
    "cli/e2m",
]

[workspace.dependencies]
#Aptos
aptos = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-cached-packages = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-aggregator = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-gas = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }
aptos-state-view = { git = "https://github.com/aptos-labs/aptos-core", rev = "3527183f390975e5b9b3189041d7455c81395af6" }

#MOVE
move-binary-format = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-core-types = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe", features = ["address32"] }
move-bytecode-source-map = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
dependencies = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-disassembler = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "2336fe284b6db095e8f0a7ce5850ee165b3816fe" }

#EVM
evm = { git = "https://github.com/pontem-network/evm.git", branch = "Keccak256" }
evm-core = { git = "https://github.com/pontem-network/evm.git", branch = "Keccak256" }
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }


anyhow = "~1.0.65"
log = "0.4"
hex = "0.4"
bcs = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = ">=0.8.26"
ethabi = "17.2"
lazy_static = "1.4"
regex = "1.6"
itertools = "0.10.3"
tempdir = "0.3.7"