[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[dependencies]
eth = { path = "eth" }
mv = { path = "mv" }
intrinsic = { path = "intrinsic" }

anyhow = "1.0.58"
ethabi = "17.2"
serde_json = "1.0.82"

# move:
move-core-types = { workspace = true, features = ["address32"] }
evm.workspace = true
evm-core.workspace = true
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }
