[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[dependencies]
eth = { path = "eth" }
mv = { path = "mv" }
intrinsic = { path = "intrinsic" }
external = { path = "external" }

anyhow.workspace = true
ethabi.workspace = true
serde_json.workspace = true

# move:
move-core-types.workspace = true
evm.workspace = true
evm-core.workspace = true
primitive-types.workspace = true
