[package]
name = "e2m"
version = "0.0.5"
edition = "2021"
authors = [
    "Maxim Vladimirov <maxim@pontem.network>",
    "Stepan Sinyakov <stepan.sinyakov@pontem.network>",
    "Dm. Yakushev <dmitryyakushev@dfinance.co>",
]
license = "MIT"
keywords = ["solidity", "sol", "move", "translator"]
description = "Converting the file solidity (abi + bin or sol) to binary code move"

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
anyhow.workspace = true
log.workspace = true
tempfile = "3.3"
serde_json.workspace = true
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11" }
bcs.workspace = true
sha2 = "0.10.5"
hex.workspace = true
itertools.workspace = true

# EVM
ethabi.workspace = true

# Aptos
aptos.workspace = true
aptos-vm.workspace = true
aptos-types.workspace = true
aptos-framework.workspace = true
aptos-cached-packages.workspace = true

# Move
move-core-types.workspace = true
move-binary-format.workspace = true

# local
translator = { path = "../../translator" }
test_infra = { path = "../../translator/test_infra" }
eth = { path = "../../translator/eth" }
move_executor = { path = "../../translator/me" }

[dev-dependencies]
tempdir.workspace = true
copy_dir = "0.1.2"
serde_yaml.workspace = true



