[package]
name = "s2m"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Vladimirov <maxim@pontem.network>"]
license = "MIT"
keywords = ["solidity", "sol", "move", "translator"]
description = "Converting a sol file to move bin"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4"
sha2 = { version = "0.10", default-features = false }
base32 = "0.4"

move-core-types = {git = "https://github.com/move-language/move", rev = "f3c921433758340cb95075ae9918095878686d3c" , features = ["address32"] }
# local
translator = { path = "../../translator" }
inic_log = { path = "../inic_log" }
