[package]
name = "eth"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
anyhow = "1.0.58"
log = "0.4.17"
ethabi = "17.2"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sha3 = "0.10.1"
base32 = "0.4"
tempdir = "0.3.7"

# types
evm.workspace = true
evm-core.workspace = true
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }
move-core-types = { workspace = true, features = ["address32"] }
