[package]
name = "eth"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
anyhow.workspace = true
log.workspace = true
ethabi.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3 = "0.10.1"
base32 = "0.4"
tempdir.workspace = true

# types
evm.workspace = true
evm-core.workspace = true
primitive-types.workspace = true
move-core-types.workspace = true
