[package]
name = "intrinsic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
enum-iterator = "1.2.0"
rand.workspace = true
lazy_static.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true

[dev-dependencies]
move-bytecode-verifier.workspace = true

[build-dependencies]
anyhow.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true