[package]
name = "move_executor"
version = "0.1.0"
edition = "2021"
authors = [
    "Dm. Yakushev <dmitryyakushev@dfinance.co>",
    "Maxim Vladimirov <maxim@pontem.network>",
]
keywords = ["move", "vm", "executor" ]
description = "Execution of the MOVE binarycode"

autotests = false
autobins = false
publish = false


[dependencies]
reqwest = { version = "0.11" }
once_cell = "1.13.1"
itertools = "0.10.3"
anyhow.workspace = true
bcs.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

# aptos
aptos.workspace = true
aptos-types = { workspace = true }
aptos-vm = { workspace = true, features = ["testing"] }
aptos-gas = { workspace = true }
aptos-state-view = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-crypto = { workspace = true }

#
move-core-types.workspace = true
move-binary-format = { workspace = true }
move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-types = { workspace = true }

#
ethabi.workspace = true

# local
eth = { path = "../eth" }
test_infra = { path = "../test_infra" }
translator = { path = "../../translator" }


