[package]
name = "move_executor"
version = "0.1.0"
edition = "2021"
authors = [
    "Dm. Yakushev <dmitryyakushev@dfinance.co>",
    "Maxim Vladimirov <maxim@pontem.network>",
]
keywords = ["move", "vm", "executor"]
description = "Execution of the MOVE binarycode"

autotests = false
autobins = false
publish = false


[dependencies]
reqwest = { version = "0.11" }
once_cell = "1.13.1"
itertools.workspace = true
anyhow.workspace = true
bcs.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
log.workspace = true

# aptos
aptos-types = { workspace = true }
aptos-vm = { workspace = true, features = ["testing"] }
aptos-gas = { workspace = true }
aptos-state-view = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-crypto = { workspace = true }

#
move-core-types.workspace = true
move-binary-format = { workspace = true }
move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-types = { workspace = true }

#
ethabi.workspace = true
primitive-types.workspace = true

# local
eth = { path = "../eth" }
test_infra = { path = "../test_infra" }
translator = { path = "../../translator" }


