[package]
name = "mv"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
anyhow = "1.0.58"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sha3 = "0.10.1"
itertools = "0.10.3"
uint = "0.9.3"
log = "0.4.17"
ethabi = "17.2"

# local dependencies
eth = { path = "../eth" }
intrinsic = { path = "../intrinsic" }

# move:
move-core-types = { workspace = true, features = ["address32"] }
move-binary-format = { workspace = true }
move-bytecode-source-map = { workspace = true }
move-ir-types = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-disassembler = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
test_infra = { path = "../test_infra" }