[package]
name = "mv"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
anyhow.workspace = true
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sha3 = "0.10.1"
itertools = "0.10.3"
log.workspace = true
ethabi = "17.2"

# local dependencies
eth = { path = "../eth" }
intrinsic = { path = "../intrinsic" }

# move:
move-core-types.workspace = true
move-binary-format = { workspace = true }
move-bytecode-source-map = { workspace = true }
move-ir-types = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-disassembler = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
test_infra = { path = "../test_infra" }