[package]
name = "mv"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3 = "0.10.1"
itertools.workspace = true
log.workspace = true
ethabi.workspace = true
bcs.workspace = true

# local dependencies
eth = { path = "../eth" }
intrinsic = { path = "../intrinsic" }

# move:
move-core-types.workspace = true
move-binary-format.workspace = true
move-bytecode-source-map.workspace = true
move-ir-types.workspace = true
move-bytecode-verifier.workspace = true
move-disassembler.workspace = true

[dev-dependencies]
rand.workspace = true
test_infra = { path = "../test_infra" }