[package]
name = "test_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# logs
log = "0.4"
lazy_static = "1.4"
termion = "1.5.6"
chrono = "0.4"
anyhow = "1.0.58"
regex = "1.6"
ethabi = "17.2"

[dev-dependencies]
mv = { path = "../mv" }
eth = { path = "../eth" }
translator = { path = ".." }
intrinsic = { path = "../intrinsic" }

move-bytecode-source-map = { git = "https://github.com/move-language/move", rev = "f3c921433758340cb95075ae9918095878686d3c" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "f3c921433758340cb95075ae9918095878686d3c" }
#
evm.workspace = true
primitive-types.workspace = true

rand = "0.8.5"
hex = "0.4"
bcs = "0.1.3"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
once_cell = "1.13.1"
itertools = "0.10.3"
tempdir = "0.3.7"

move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-types = { workspace = true }
move-core-types.workspace = true
move-binary-format = { workspace = true }
move-stdlib = { workspace = true, features = ["testing"] }

aptos-vm = { workspace = true, features = ["testing"] }
aptos-gas = { workspace = true }
aptos-types = { workspace = true }
move-deps = { workspace = true }
framework = { workspace = true }
aptos-crypto = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-state-view = { workspace = true }

# for test *.sol
libtest-mimic = "0.4"
regex = "1.6"

# logs
env_logger = "0.9"

[[test]]
name = "sol"
harness = false
