[package]
name = "test_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# logs
log.workspace = true
lazy_static.workspace = true
termion = "1.5.6"
chrono = "0.4"
anyhow.workspace = true
regex.workspace = true
ethabi.workspace = true

[dev-dependencies]
mv = { path = "../mv" }
eth = { path = "../eth" }
translator = { path = ".." }
intrinsic = { path = "../intrinsic" }

move-bytecode-source-map.workspace = true
move-ir-types.workspace = true
#
evm.workspace = true
primitive-types.workspace = true

rand.workspace = true
hex.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell = "1.13.1"
itertools = "0.10.3"
tempdir = "0.3.7"

move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-types = { workspace = true }
move-core-types.workspace = true
move-binary-format = { workspace = true }
move-stdlib = { workspace = true, features = ["testing"] }

aptos = { workspace = true }
aptos-vm = { workspace = true, features = ["testing"] }
aptos-gas = { workspace = true }
aptos-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-state-view = { workspace = true }
move-deps = { workspace = true }
framework = { workspace = true }

# for test *.sol
libtest-mimic = "0.4"
regex.workspace = true

# logs
env_logger = "0.9"

[build-dependencies]
anyhow = "1.0.62"

[[test]]
name = "sol"
harness = false
