[package]
name = "test_infra"
version = "0.3.1"
edition = "2021"

[dependencies]
# logs
lazy_static.workspace = true
log.workspace = true
termion = "1.5.6"
chrono = "0.4"
anyhow.workspace = true
regex.workspace = true

[dev-dependencies]
move_executor = { path = "../me" }
eth = { path = "../eth" }
translator = { path = ".." }
intrinsic = { path = "../intrinsic" }

#
ethabi.workspace = true
evm.workspace = true
primitive-types.workspace = true

rand.workspace = true
hex.workspace = true
serde_json.workspace = true
itertools.workspace = true

move-core-types.workspace = true
move-binary-format = { workspace = true }

# for test *.sol
libtest-mimic = "0.4"
regex.workspace = true

# logs
env_logger = "0.9"

[build-dependencies]
anyhow = "1.0.62"

[[test]]
name = "sol"
harness = false
